remove dark mode due to colour issues

--- a/stock-tracker/src/app/components/forms/CustomForm.module.css
+++ b/stock-tracker/src/app/components/forms/CustomForm.module.css
@@ -34,7 +34,7 @@
     border: 1px solid;
     box-shadow: 0px 2px 24px #0197c5;
     background-color: #00c3ff;
-    border-color: #0197c5;
+    border-color: #00c3ff;
     color:black;
     font-size: 1rem;
     font-weight: 700;
